Add a Dummy PointSystem for Matches that don't need a PointSystem at all.
- major improvements in readabilities in SelectGameController
- Fixing reading of Pointsystem-Error Bug (TableController)